test_suite/ui/overlapping_flags.stderr
error[E0081]: discriminant value `1` assigned more than once
 --> ui/overlapping_flags.rs:7:1
  |
7 | enum Foo {
  | ^^^^^^^^
8 |     SomeFlag = 1 << 0,
  |                ------ `1` assigned here
9 |     OverlappingFlag = 1 << 0,
  |                       ------ `1` assigned here
